// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds admin get moderation action view gets moderation report for a record. 1`] = `
Object {
  "createdAt": "1970-01-01T00:00:00.000Z",
  "id": 2,
  "reason": "defamation",
  "reasonType": "com.atproto.report.reasonType#other",
  "reportedByDid": "user(0)",
  "resolvedByActions": Array [
    Object {
      "action": "com.atproto.admin.moderationAction#takedown",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "Y",
      "id": 2,
      "reason": "X",
      "resolvedReportIds": Array [
        2,
      ],
      "subject": Object {
        "$type": "com.atproto.repo.strongRef",
        "cid": "cids(0)",
        "uri": "record(0)",
      },
      "subjectBlobCids": Array [],
    },
    Object {
      "action": "com.atproto.admin.moderationAction#flag",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "Y",
      "id": 1,
      "reason": "X",
      "resolvedReportIds": Array [
        2,
        1,
      ],
      "reversal": Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "Y",
        "reason": "X",
      },
      "subject": Object {
        "$type": "com.atproto.repo.repoRef",
        "did": "user(1)",
      },
      "subjectBlobCids": Array [],
    },
  ],
  "subject": Object {
    "$type": "com.atproto.admin.record#view",
    "blobCids": Array [],
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {
      "currentAction": Object {
        "action": "com.atproto.admin.moderationAction#takedown",
        "id": 2,
      },
    },
    "repo": Object {
      "account": Object {
        "email": "alice@test.com",
      },
      "did": "user(1)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "moderation": Object {},
      "relatedRecords": Array [
        Object {
          "$type": "app.bsky.system.declaration",
          "actorType": "app.bsky.system.actorUser",
        },
        Object {
          "$type": "app.bsky.actor.profile",
          "avatar": Object {
            "cid": "cids(1)",
            "mimeType": "image/jpeg",
          },
          "description": "its me!",
          "displayName": "ali",
        },
      ],
    },
    "uri": "record(0)",
    "value": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hey there",
    },
  },
}
`;

exports[`pds admin get moderation action view gets moderation report for a repo. 1`] = `
Object {
  "createdAt": "1970-01-01T00:00:00.000Z",
  "id": 1,
  "reasonType": "com.atproto.report.reasonType#spam",
  "reportedByDid": "user(0)",
  "resolvedByActions": Array [
    Object {
      "action": "com.atproto.admin.moderationAction#flag",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "Y",
      "id": 1,
      "reason": "X",
      "resolvedReportIds": Array [
        2,
        1,
      ],
      "reversal": Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "Y",
        "reason": "X",
      },
      "subject": Object {
        "$type": "com.atproto.repo.repoRef",
        "did": "user(1)",
      },
      "subjectBlobCids": Array [],
    },
  ],
  "subject": Object {
    "$type": "com.atproto.admin.repo#view",
    "account": Object {
      "email": "alice@test.com",
    },
    "did": "user(1)",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {},
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.system.declaration",
        "actorType": "app.bsky.system.actorUser",
      },
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "cid": "cids(0)",
          "mimeType": "image/jpeg",
        },
        "description": "its me!",
        "displayName": "ali",
      },
    ],
  },
}
`;
